8309862: Unsafe list operations in JfrStringPool

Reviewed-by: mgronlun
Backport-of: 05f896a153ee950b21bae251d2870a8adfe4f04a